<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_large"
    tools:background="#333333">

    <TextView
        android:id="@+id/question_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:padding="@dimen/padding_small"
        android:text="@string/wheelchair"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/text_color_light"
        app:layout_constraintEnd_toEndOf="@+id/question_imageView"
        app:layout_constraintStart_toStartOf="@+id/question_imageView"
        app:layout_constraintTop_toBottomOf="@+id/question_imageView"
        tools:text="@string/wheelchair"/>

    <TextView
        android:id="@+id/question_previous_answers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:gravity="center_horizontal"
        android:padding="@dimen/padding_small"
        android:text="@string/others_have_answered_this_question"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/text_color_light"
        app:layout_constraintLeft_toLeftOf="@+id/question_textview"
        app:layout_constraintRight_toRightOf="@+id/question_textview"
        app:layout_constraintTop_toBottomOf="@+id/question_textview"/>

    <ImageView
        android:id="@+id/question_imageView"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@drawable/rounded_top"
        android:backgroundTint="@color/colorAccent"
        android:contentDescription="@string/icon_content_description"
        android:paddingTop="@dimen/padding_small"
        android:src="@drawable/ic_fast_food"
        android:tint="@color/image_color_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:tint="@color/white"/>

    <Button
        android:id="@+id/answer_yes"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_bottom_left"
        android:backgroundTint="@color/colorPrimary"
        android:drawablePadding="@dimen/padding_small"
        android:drawableTop="@drawable/ic_yes"
        android:paddingBottom="@dimen/padding_medium"
        android:paddingTop="@dimen/padding_medium"
        android:text="@string/yes"
        android:textColor="@color/text_color_light"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="@+id/question_textview"
        app:layout_constraintRight_toLeftOf="@+id/answer_no"
        app:layout_constraintTop_toBottomOf="@+id/question_previous_answers"/>

    <Button
        android:id="@+id/answer_no"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:drawablePadding="@dimen/padding_small"
        android:drawableTop="@drawable/ic_no"
        android:paddingBottom="@dimen/padding_medium"
        android:paddingTop="@dimen/padding_medium"
        android:text="@string/no"
        android:textColor="@color/text_color_light"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/answer_yes"
        app:layout_constraintRight_toLeftOf="@+id/answer_unsure"
        app:layout_constraintTop_toBottomOf="@+id/question_previous_answers"/>

    <Button
        android:id="@+id/answer_unsure"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_bottom_right"
        android:backgroundTint="@color/colorPrimary"
        android:drawablePadding="@dimen/padding_small"
        android:drawableTop="@drawable/ic_unsure"
        android:paddingBottom="@dimen/padding_medium"
        android:paddingTop="@dimen/padding_medium"
        android:text="@string/unsure"
        android:textColor="@color/text_color_light"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/answer_no"
        app:layout_constraintRight_toRightOf="@+id/question_textview"
        app:layout_constraintTop_toBottomOf="@+id/question_previous_answers"/>

</android.support.constraint.ConstraintLayout>